--- a/FinalProject/Sprint1/app/src/main/AndroidManifest.xml
+++ b/FinalProject/Sprint1/app/src/main/AndroidManifest.xml
@@ -10,6 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RowReduction">
         <activity
+            android:name=".MultiplyByConstantActivity"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".SwapRows" -->
+        <!-- android:exported="false" /> -->
+        <activity
+            android:name=".SwapRows"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Transparent.NoActionBar"></activity>
+        <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
