--- a/MCCFollowAlongProjectPt3/app/src/main/AndroidManifest.xml
+++ b/MCCFollowAlongProjectPt3/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MCCFollowAlongProjectPt2">
         <activity
+            android:name=".Summary"
+            android:exported="false" />
+        <activity
             android:name=".ChooseClass"
             android:exported="false" />
         <activity
